filestore-deploy/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filestore
  namespace: waterlily-filestore
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: filestore
